# C_CPP_Huji

CPP_Projects/: CMakeLists.txt
CPP_Projects/ex5-oren503/: Activation.cpp  Activation.h  Dense.cpp  Dense.h  Matrix.cpp  Matrix.h  MlpNetwork.cpp  MlpNetwork.h  README.md
CPP_Projects/ex6-oren503/: README.md  vl_string.h  vl_vector.h
C_Projects/: CMakeLists.txt
C_Projects/ex1-oren503/: README.md  cipher  cipher.c  valgrind_out.txt
C_Projects/ex1-oren503/tests/: text2.txt  valgrind_out.txt
C_Projects/ex1-oren503/tests/test_erel/test_files/: letters_failed_k=15.txt  mixed_-12_enc_failed_k=-12.txt  mixed_-382_enc_failed_k=-382.txt  mixed_failed_k=260000257.txt  symbols_with_letters_failed_k=23.txt
C_Projects/ex2-oren503/: README.md  manageStudents.c
C_Projects/ex2-oren503/Tests/: manageStudents
C_Projects/ex2-oren503/Tests/maor_tests/: manageStudents.exe.stackdump  maor_test.py
C_Projects/ex2-oren503/Tests/my_tests/: my_test.cpp  my_test.py
C_Projects/ex2-oren503/Tests/ori_tests/: main.py
C_Projects/ex2-oren503/Tests/ori_tests/cmp_files/: best1.cmp  best2.cmp  bubble1.cmp  bubble2.cmp  bubble4.cmp  bubble5.cmp  bubble7.cmp  quick2.cmp  quick4.cmp  quick6.cmp  student_list.cmp
C_Projects/ex2-oren503/Tests/ori_tests/in_files/: best1.in  best2.in  best3.in  best4.in  bubble3.in  bubble4.in  bubble6.in  bubble7.in  quick1.in  quick2.in  val.in  (+5 more)
C_Projects/ex3-oren503/: README.md  tweetsGenerator.c
C_Projects/ex3-oren503/Tests/: t2.txt  trump_tweets.txt  valgrind_out.txt
C_Projects/ex3-oren503/Tests/Noam_test/: noams_test.py  stdout.txt  stdout2.txt  tweetsGenerator  valgrind-out.txt
C_Projects/ex3-oren503/Tests/my_tests/: my_test.c  my_test.cpp  my_test.py  t1.txt
C_Projects/ex4-oren503/: Makefile  README.md  hash_funcs.h  hashmap.c  test_pairs.h  test_suite.c  vector.c
